# lazy_bastard

./: Cargo.toml  README.md  README.txt
examples/: global_test.rs  main_passing.rs  mt.rs  time_test.rs
src/: lib.rs  macros.rs
