[package]
name = "lazy_bastard"
version = "0.1.6"
edition = "2021"
description = "A helpfull macro because writeing a seperate Default function is too much effort"
license = "MIT"
repository = "https://github.com/zachdedoo13/lazy_bastard"


[dependencies]
lazy_static = "1.5.0"

syn = { version = "2.0.79", features = ["full", "visit", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"